welcome.lessons.welcome.loopwhile.LoopWhile.scala.error
Program:2: error: not found: value non
while (non estFaceMur()){
       ^Program:3: error: not found: value avancer
	avancer();
        ^